--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ html {
   font-family: sans-serif;
 }
 
+input {}
+
 #search {
 
 
@@ -17,7 +19,11 @@ html {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 20px;
-  margin: 5px 10px; 
+  margin: 5px 10px;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 4;
 }
 
 /*!
