made corrections for code to run

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ main {
   justify-content: center;
 }
 
+body {
+  justify-content: center;
+}
+
 .gallery {
   display: grid;
   max-width: 1000px;
