--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,15 @@ body {
   justify-content: center;
 }
 
+#search {
+  background-position: top;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 15px;
+  border: 1px solid #D3D3D3;
+  margin-bottom: 15px; 
+}
+
 .gallery {
   display: grid;
   max-width: 1000px;
