--- a/css/styles.css
+++ b/css/styles.css
@@ -26,12 +26,10 @@ main {
   max-width: 1000px;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
-  justify-content: space-evenly;
-  justify-items: center;
-  align-content: space-evenly;
-  align-items:center;
   grid-gap: 15px;
   margin: 5px 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*!
