--- a/css/styles.css
+++ b/css/styles.css
@@ -11,14 +11,15 @@ main {
   width: 100%;
 }
 
-input {
-  margin-right: auto;
-  margin-left: auto;
+input#search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #search {
   background-position: top;
-  width: 80%;
+  width: 55%;
   font-size: 16px;
   padding: 12px 15px;
   border: 1px solid #D3D3D3;
